# ai_birthday_calendar

./: .env.example  .gitignore  README.md  birthdays.service  install.sh  pyproject.toml
app/: __init__.py  auth.py  config.py  main.py  models.py  scheduler.py  storage.py
app/routes/: auth.py  birthdays.py  settings.py
app/static/: index.html
app/static/css/: styles.css
app/static/js/: app.js
tests/: conftest.py  test_api.py  test_auth.py  test_models.py  test_scheduler.py  test_storage.py
